--- a/src/lngProvider/locales/pt_BR.json
+++ b/src/lngProvider/locales/pt_BR.json
@@ -4,6 +4,11 @@
   "sidebar.main": "Principal",
   "sidebar.samplePage": "Dashboard",
   "sidebar.dashboard": "Dashboard",
+  "sidebar.services": "Serviços",
+  "sidebar.services_categories": "Tipos de Serviço",
+  "sidebar.employees": "Funcionários",
+  "sidebar.account": "Minha conta",
+  "sidebar.clients": "Clientes",
   "sidebar.dashboard.crm": "Crm",
   "sidebar.components": "Components",
   "sidebar.components.general": "General",
