--- a/src/lngProvider/locales/pt_BR.json
+++ b/src/lngProvider/locales/pt_BR.json
@@ -5,10 +5,11 @@
   "sidebar.samplePage": "Dashboard",
   "sidebar.dashboard": "Dashboard",
   "sidebar.services": "Serviços",
-  "sidebar.services_categories": "Tipos de Serviço",
+  "sidebar.service_categories": "Tipos de Serviço",
   "sidebar.employees": "Funcionários",
   "sidebar.account": "Minha conta",
   "sidebar.clients": "Clientes",
+  "routes.add.clients": "Cliente",
   "sidebar.dashboard.crm": "Crm",
   "sidebar.components": "Components",
   "sidebar.components.general": "General",
@@ -204,8 +205,10 @@
   "testimonials.classic": "Classic",
   "testimonials.standard": "Standard",
   "extraElements.testimonials": "Testimonials",
-  "button.modify": "Modify",
-  "button.delete": "Delete",
+  "table.actions": "Opções",
+  "button.modify": "Modificar",
+  "button.delete": "Excluir",
+  "button.delete.confirm": "Deseja Excluir o registro?",
   "pricingTable.basic": "Basic",
   "pricingTable.circle": "Circle",
   "pricingTable.classic": "Classic",
